--- a/ch10_leader_board/k8s/postgresql/deployment.yaml
+++ b/ch10_leader_board/k8s/postgresql/deployment.yaml
@@ -65,6 +65,45 @@ data:
     FOR EACH STATEMENT
     EXECUTE FUNCTION refresh_top10();
 
+    -- ====================================================
+    -- 預填充 50,000 筆測試資料
+    -- 目的：展示 PostgreSQL 在排行榜場景的性能問題
+    -- ====================================================
+
+    -- 1. 建立 50,000 個用戶
+    INSERT INTO users (user_id, username)
+    SELECT
+      'player_' || i,
+      'Player ' || i
+    FROM generate_series(1, 50000) AS i;
+
+    -- 2. 為每個用戶建立當月排行榜記錄，分數為 1-1000 的隨機值
+    INSERT INTO monthly_leaderboard (user_id, score, month)
+    SELECT
+      'player_' || i,
+      floor(random() * 1000 + 1)::int,
+      TO_CHAR(CURRENT_DATE, 'YYYY-MM')
+    FROM generate_series(1, 50000) AS i;
+
+    -- 3. 為每個用戶建立對應的分數歷史記錄（模擬贏得比賽的記錄）
+    -- 每個用戶的歷史記錄數等於他的分數
+    INSERT INTO score_history (user_id, match_id, points)
+    SELECT
+      ml.user_id,
+      ml.user_id || '_match_' || s,
+      1
+    FROM monthly_leaderboard ml
+    CROSS JOIN LATERAL generate_series(1, ml.score) AS s
+    WHERE ml.month = TO_CHAR(CURRENT_DATE, 'YYYY-MM');
+
+    -- 4. 重新整理 materialized view
+    REFRESH MATERIALIZED VIEW top10_current_month;
+
+    -- 5. 分析表以更新統計資訊（幫助查詢優化器）
+    ANALYZE users;
+    ANALYZE monthly_leaderboard;
+    ANALYZE score_history;
+
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -101,11 +140,11 @@ spec:
           mountPath: /docker-entrypoint-initdb.d
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
             memory: "512Mi"
             cpu: "500m"
+          limits:
+            memory: "1Gi"
+            cpu: "1000m"
       volumes:
       - name: postgres-init
         configMap:
