I'll analyze this PR for the leaderboard service, focusing on the key changes and improvements.
1. **Added Redis/Valkey Caching**:
   - Implemented a dual-path architecture with `/v1` endpoints using PostgreSQL only and `/v2` endpoints using PostgreSQL + Valkey
   - Added Redis client configuration and connection handling
   - Created `ValkeyRepository` implementation that uses Redis sorted sets for leaderboard operations

2. **Performance Improvements**:
   - Added connection pooling for PostgreSQL (max 20 connections)
   - Implemented data synchronization from PostgreSQL to Valkey on startup
   - Optimized leaderboard queries using Redis sorted set operations (ZREVRANGE, ZREVRANK)
   - Performance test results show significant improvements:
     - PostgreSQL-only: P95 latency of ~9 seconds
     - With Valkey: P95 latency of ~392ms (over 20x improvement)

3. **Observability Enhancements**:
   - Added distributed tracing with OpenTelemetry
   - Enhanced metrics middleware to track scenario-specific metrics
   - Created comprehensive Grafana dashboard with comparison views
   - Added Tempo configuration for tracing visualization

4. **Code Structure Improvements**:
   - Created a `Repository` interface to abstract storage implementations
   - Added context-aware methods for tracing propagation
   - Improved error handling and logging

5. **Documentation**:
   - Added architecture PDF document
   - Included performance test results

1. **Redis Implementation**:
   - Uses Redis sorted sets (ZSET) for O(log n) operations
   - Score updates: ZINCRBY - O(log n)
   - Top players: ZREVRANGE - O(log n + m)
   - User rank: ZREVRANK - O(log n)

2. **Tracing**:
   - Added spans for database operations
   - Normalized high-cardinality paths
   - Propagated context through the request lifecycle

3. **Metrics**:
   - Added scenario labels to differentiate between PostgreSQL-only and Redis+PostgreSQL
   - Added SLO compliance metrics and visualizations

The PR demonstrates signific

--- a/ch10_leader_board/Makefile
+++ b/ch10_leader_board/Makefile
@@ -1,10 +1,33 @@
 # Makefile
-.PHONY: all setup cluster deploy test clean
+.PHONY: all setup cluster deploy test clean logs port-forward
 
 CLUSTER_NAME := leaderboard-demo
 NAMESPACE := leaderboard
 
-all: setup cluster deploy
+all: setup cluster deploy wait-ready
+
+wait-ready:
+	@echo "Waiting for all pods to be ready..."
+	kubectl wait --for=condition=ready pod -l app=leaderboard --timeout=120s -n $(NAMESPACE) || true
+	@echo ""
+	@echo "=========================================="
+	@echo "  Deployment Complete!"
+	@echo "=========================================="
+	@echo ""
+	@echo "Access Points:"
+	@echo "  - Grafana:     http://localhost:30300 (admin/admin)"
+	@echo "  - Prometheus:  http://localhost:30090"
+	@echo "  - App:         http://localhost:30080"
+	@echo ""
+	@echo "API Endpoints:"
+	@echo "  - /v1/scores   -> PostgreSQL Only"
+	@echo "  - /v2/scores   -> PostgreSQL + Valkey"
+	@echo ""
+	@echo "Run Tests:"
+	@echo "  make test-scenario1   # Test /v1 (PostgreSQL only)"
+	@echo "  make test-scenario2   # Test /v2 (PostgreSQL + Valkey)"
+	@echo "  make test-both        # Run both scenarios"
+	@echo ""
 
 setup:
 	@echo "Installing required tools..."
@@ -26,22 +49,40 @@ deploy-namespace:
 	kubectl apply -f k8s/namespace.yaml
 
 deploy-monitoring:
-	@echo "Deploying Prometheus and Grafana..."
+	@echo "Deploying Prometheus, Grafana, and Tempo..."
 	helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
 	helm repo add grafana https://grafana.github.io/helm-charts
 	helm repo update
-	
+
 	helm upgrade --install prometheus prometheus-community/kube-prometheus-stack \
 		--namespace $(NAMESPACE) \
 		--set prometheus.prometheusSpec.serviceMonitorSelectorNilUsesHelmValues=false \
+		--set prometheus.prometheusSpec.enableRemoteWriteReceiver=true \
 		--set grafana.adminPassword=admin \
 		--set grafana.service.type=NodePort \
 		--set grafana.service.nodePort=30300 \
 		--set prometheus.service.type=NodePort \
-		--set prometheus.service.nodePort=30090
+		--set prometheus.service.nodePort=30090 \
+		--set "grafana.additionalDataSources[0].name=Tempo" \
+		--set "grafana.additionalDataSources[0].type=tempo" \
+		--set "grafana.additionalDataSources[0].url=http://tempo:3200" \
+		--set "grafana.additionalDataSources[0].access=proxy" \
+		--set "grafana.additionalDataSources[0].jsonData.tracesToMetrics.datasourceUid=prometheus" \
+		--set "grafana.additionalDataSources[0].jsonData.serviceMap.datasourceUid=prometheus" \
+		--set "grafana.additionalDataSources[0].jsonData.nodeGraph.enabled=true"
+
+	@echo "Deploying Tempo for distributed tracing..."
+	helm upgrade --install tempo grafana/tempo \
+		--namespace $(NAMESPACE) \
+		--values k8s/monitoring/tempo-values.yaml \
+		--wait --timeout 3m
+
+	@echo "Deploying Grafana dashboard..."
+	kubectl apply -f k8s/monitoring/grafana-dashboard.yaml
 
 deploy-postgresql:
 	@echo "Deploying PostgreSQL via Helm..."
+	helm repo add bitnami https://charts.bitnami.com/bitnami
 	helm upgrade --install postgresql bitnami/postgresql \
 		--namespace $(NAMESPACE) \
 		--values k8s/postgresql-values.yaml \
@@ -56,16 +97,55 @@ deploy-app:
 	docker build -t leaderboard-app:latest -f docker/Dockerfile.app .
 	k3d image import leaderboard-app:latest -c $(CLUSTER_NAME)
 	kubectl apply -f k8s/app/
+	kubectl apply -f k8s/app/hpa.yaml
 
 test-scenario1:
-	@echo "Running Scenario 1: RDB Only"
-	@echo "Service available at http://localhost:8081"
+	@echo "Running Scenario 1: PostgreSQL Only (/v1)"
+	@echo "Endpoint: http://localhost:30080/v1/scores"
+	@echo "Open Grafana at http://localhost:30300 to watch metrics"
+	@echo ""
 	k6 run k6/scenario1-rdb.js
 
 test-scenario2:
-	@echo "Running Scenario 2: With Valkey"
-	@echo "Service available at http://localhost:8082"
+	@echo "Running Scenario 2: PostgreSQL + Valkey (/v2)"
+	@echo "Endpoint: http://localhost:30080/v2/scores"
+	@echo "Open Grafana at http://localhost:30300 to watch metrics"
+	@echo ""
 	k6 run k6/scenario2-redis.js
+
+test-both:
+	@echo "Running both scenarios sequentially..."
+	@echo ""
+	@echo "=== Scenario 1: PostgreSQL Only (/v1) ==="
+	k6 run k6/scenario1-rdb.js
+	@echo ""
+	@echo "Waiting 30 seconds before next scenario..."
+	sleep 30
+	@echo ""
+	@echo "=== Scenario 2: PostgreSQL + Valkey (/v2) ==="
+	k6 run k6/scenario2-redis.js
+	@echo ""
+	@echo "Tests complete! Check Grafana for comparison."
+
+logs:
+	@echo "Showing logs for all leaderboard pods..."
+	kubectl logs -l app=leaderboard -n $(NAMESPACE) --tail=100 -f
+
+status:
+	@echo "=== Pods ==="
+	kubectl get pods -n $(NAMESPACE)
+	@echo ""
+	@echo "=== Services ==="
+	kubectl get svc -n $(NAMESPACE)
+
+restart-app:
+	kubectl rollout restart deployment/leaderboard-app -n $(NAMESPACE)
+
+rebuild-app:
+	docker build -t leaderboard-app:latest -f docker/Dockerfile.app .
+	k3d image import leaderboard-app:latest -c $(CLUSTER_NAME)
+	$(MAKE) restart-app
+	kubectl wait --for=condition=ready pod -l app=leaderboard --timeout=120s -n $(NAMESPACE)
 
 clean:
 	k3d cluster delete $(CLUSTER_NAME)
