--- a/ch10_leader_board/k8s/app/servicemonitor.yaml
+++ b/ch10_leader_board/k8s/app/servicemonitor.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: leaderboard-metrics-rdb
+  name: leaderboard-metrics
   namespace: leaderboard
   labels:
     app: leaderboard
-    scenario: rdb-only
 spec:
   selector:
     app: leaderboard
-    scenario: rdb-only
   ports:
   - name: metrics
     port: 8080
@@ -20,16 +18,14 @@ spec:
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: leaderboard-monitor-rdb
+  name: leaderboard-monitor
   namespace: leaderboard
   labels:
     app: leaderboard
-    scenario: rdb-only
 spec:
   selector:
     matchLabels:
       app: leaderboard
-      scenario: rdb-only
   endpoints:
   - port: metrics
     path: /metrics
