feat(k8s): disable OpenTelemetry Go auto-instrumentation in leader board deployment

--- a/ch10_leader_board/k8s/app/deployment.yaml
+++ b/ch10_leader_board/k8s/app/deployment.yaml
@@ -30,6 +30,8 @@ spec:
           value: "tempo:4317"
         - name: ENVIRONMENT
           value: "demo"
+        - name: OTEL_GO_AUTO_ENABLED
+          value: "false"
         resources:
           requests:
             memory: "128Mi"
