--- a/ch10_digital_wallet/config/otel-collector.yaml
+++ b/ch10_digital_wallet/config/otel-collector.yaml
@@ -29,6 +29,12 @@ exporters:
     tls:
       insecure: true
 
+  # Export logs to Loki (via OTLP - Loki 3.x native support)
+  otlphttp/loki:
+    endpoint: http://loki:3100/otlp
+    tls:
+      insecure: true
+
   # Debug exporter for development
   debug:
     verbosity: basic
@@ -44,6 +50,11 @@ service:
       receivers: [otlp]
       processors: [memory_limiter, batch]
       exporters: [prometheusremotewrite]
+
+    logs:
+      receivers: [otlp]
+      processors: [memory_limiter, batch]
+      exporters: [otlphttp/loki]
 
   telemetry:
     logs:
